--- a/assets/webconfig/content/leds.html
+++ b/assets/webconfig/content/leds.html
@@ -183,6 +183,13 @@
 															<div class="input-group-addon">%</div>
 														</div>
 													</div>
+													<div class="form-group">
+														<label class="col-form-label col-md-6" style="width:190px;max-width:200px" lang="en" data-lang-token="conf_leds_layout_cl_edgegap">Edge Gap</label>
+														<div class=" input-group">
+															<input class="form-control ledCLconstr" id="ip_cl_ledsedgegap" type="number" value="0" min="0" max="30" step="1"></input>
+															<div class="input-group-addon">%</div>
+														</div>
+													</div>
 												</div>
 											</div>
 										</div>
@@ -220,8 +227,8 @@
 										<label class="col-form-label col-md-6" style="width:170px;max-width:200px" lang="en" data-lang-token="conf_leds_layout_ma_cabling">Cabling</label>
 										<div class=" input-group">
 											<select class="form-control ledMAconstr" id="ip_ma_cabling">
-												<option value="snake" lang="en" data-lang-attribute="conf_leds_layout_ma_optsnake">Snake</option>
-												<option value="parallel" lang="en" data-lang-attribute="conf_leds_layout_ma_optparallel">Parallel</option>
+												<option value="snake" lang="en" data-lang-token="conf_leds_layout_ma_optsnake">Snake</option>
+												<option value="parallel" lang="en" data-lang-token="conf_leds_layout_ma_optparallel">Parallel</option>
 											</select>
 										</div>
 									</div>
@@ -229,8 +236,8 @@
 										<label class="col-form-label col-md-6" style="width:170px;max-width:200px" lang="en" data-lang-token="conf_leds_layout_ma_order">Order</label>
 										<div class=" input-group">
 											<select class="form-control ledMAconstr" id="ip_ma_order">
-												<option value="horizontal" lang="en" data-lang-attribute="conf_leds_layout_ma_opthoriz">Horizontal</option>
-												<option value="vertical" lang="en" data-lang-attribute="conf_leds_layout_ma_optvert">Vertical</option>
+												<option value="horizontal" lang="en" data-lang-token="conf_leds_layout_ma_opthoriz">Horizontal</option>
+												<option value="vertical" lang="en" data-lang-token="conf_leds_layout_ma_optvert">Vertical</option>
 											</select>
 										</div>
 									</div>
@@ -239,10 +246,10 @@
 										<label class="col-form-label col-md-6" style="width:170px;max-width:200px" lang="en" data-lang-token="conf_leds_layout_ma_position">Input</label>
 										<div class=" input-group">
 											<select class="form-control ledMAconstr" id="ip_ma_start">
-												<option value="top-left" lang="en" data-lang-attribute="conf_leds_layout_ma_opttopleft">Top left</option>
-												<option value="top-right" lang="en" data-lang-attribute="conf_leds_layout_ma_opttopright">Top right</option>
-												<option value="bottom-left" lang="en" data-lang-attribute="conf_leds_layout_ma_optbottomleft">Bottom left</option>
-												<option value="bottom-right" lang="en" data-lang-attribute="conf_leds_layout_ma_optbottomright">Bottom right</option>
+												<option value="top-left" lang="en" data-lang-token="conf_leds_layout_ma_opttopleft">Top left</option>
+												<option value="top-right" lang="en" data-lang-token="conf_leds_layout_ma_opttopright">Top right</option>
+												<option value="bottom-left" lang="en" data-lang-token="conf_leds_layout_ma_optbottomleft">Bottom left</option>
+												<option value="bottom-right" lang="en" data-lang-token="conf_leds_layout_ma_optbottomright">Bottom right</option>
 											</select>
 										</div>
 									</div>
