--- a/assets/webconfig/content/dashboard.html
+++ b/assets/webconfig/content/dashboard.html
@@ -6,7 +6,7 @@
 							<h4 lang="en" data-lang-token="dashboard_label_intro">The dashboard give you a quick overview about the status of Hyperion and show you the latest news of the Hyperion Blog.</h4>
 						</div>
 						<hr>
-							<div class="col-lg-4">
+							<div class="col-md-6 col-xxl-4">
 								<div class="panel panel-default">
 									<div class="panel-heading">
 										<i class="fa fa-info-circle fa-fw"></i>
@@ -38,7 +38,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-3">
+							<div class="col-md-6 col-xxl-3">
 								<div class="panel panel-default">
 									<div class="panel-heading">
 										<i class="fa fa-eye fa-fw"></i>
@@ -58,7 +58,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-5">
+							<div class="col-md-12 col-xxl-5">
 								<div class="panel panel-default">
 									<div class="panel-heading">
 										<i class="fa fa-newspaper-o fa-fw"></i>
