--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -25,11 +25,7 @@
 	<script src="js/lib/bootstrap-colorpicker.min.js"></script>
 	<link href="css/bootstrap-colorpicker.min.css" rel="stylesheet">
 
-	<!-- Bootstrap Switch -->
-	<script src="js/lib/bootstrap-switch.min.js"></script>
-	<link href="css/bootstrap-switch.min.css" rel="stylesheet">
-
-	<!-- JSONForm -->
+	<!-- JSONEditor -->
 	<script src="js/lib/jsoneditor.js"></script>
 
 	<!--Language Support -->
