--- a/assets/webconfig/content/leds.html
+++ b/assets/webconfig/content/leds.html
@@ -108,56 +108,57 @@
 							<div id="collapse1" class="panel-collapse collapse in">
 								<div class="panel-body ">
 									<div class="form-group">
-										<label class="col-form-label col-md-6" for="ip_cl_ledstop" style="width:170px;max-width:200px" lang="en" data-lang-token="conf_leds_layout_cl_top">Top</label>
+										<label class="col-form-label col-md-6" for="ip_cl_ledstop" style="width:170px" lang="en" data-lang-token="conf_leds_layout_cl_top">Top</label>
 										<div class=" input-group">
 											<input class="form-control ledCLconstr" id="ip_cl_ledstop" type="number" value="10" min="0" step="1"></input>
 											<div class="input-group-addon">LEDs</div>
 										</div>
 									</div>
 									<div class="form-group">
-										<label class="col-form-label col-md-6" for="ip_cl_ledsbottom" style="width:170px;max-width:200px" lang="en" data-lang-token="conf_leds_layout_cl_bottom">Bottom</label>
+										<label class="col-form-label col-md-6" for="ip_cl_ledsbottom" style="width:170px" lang="en" data-lang-token="conf_leds_layout_cl_bottom">Bottom</label>
 										<div class=" input-group">
 											<input class="form-control ledCLconstr" id="ip_cl_ledsbottom" type="number" value="10" min="0" step="1"></input>
 											<div class="input-group-addon">LEDs</div>
 										</div>
 									</div>
 									<div class="form-group">
-										<label class="col-form-label col-md-6" for="ip_cl_ledsleft" style="width:170px;max-width:200px" lang="en" data-lang-token="conf_leds_layout_cl_left">Left</label>
+										<label class="col-form-label col-md-6" for="ip_cl_ledsleft" style="width:170px" lang="en" data-lang-token="conf_leds_layout_cl_left">Left</label>
 										<div class=" input-group">
 											<input class="form-control ledCLconstr" id="ip_cl_ledsleft" type="number" value="6" min="0" step="1"></input>
 											<div class="input-group-addon">LEDs</div>
 										</div>
 									</div>
 									<div class="form-group">
-										<label class="col-form-label col-md-6" for="ip_cl_ledsright" style="width:170px;max-width:200px" lang="en" data-lang-token="conf_leds_layout_cl_right">Right</label>
+										<label class="col-form-label col-md-6" for="ip_cl_ledsright" style="width:170px" lang="en" data-lang-token="conf_leds_layout_cl_right">Right</label>
 										<div class=" input-group">
 											<input class="form-control ledCLconstr" id="ip_cl_ledsright" type="number" value="6" min="0" step="1"></input>
 											<div class="input-group-addon">LEDs</div>
 										</div>
 									</div>
 									<div class="form-group">
-										<label class="col-form-label col-md-6" for="ip_cl_ledsglength" style="width:170px;max-width:200px" lang="en" data-lang-token="conf_leds_layout_cl_gaglength">Gap length</label>
+										<label class="col-form-label col-md-6" for="ip_cl_ledsglength" style="width:170px" lang="en" data-lang-token="conf_leds_layout_cl_gaglength">Gap length</label>
 										<div class=" input-group">
 											<input class="form-control ledCLconstr" id="ip_cl_ledsglength" type="number" value="0" min="0" step="1"></input>
 											<div class="input-group-addon">LEDs</div>
 										</div>
 									</div>
 									<div class="form-group">
-										<label class="col-form-label col-md-6" for="ip_cl_ledsgpos" style="width:170px;max-width:200px" lang="en" data-lang-token="conf_leds_layout_cl_gappos">Gap position</label>
+										<label class="col-form-label col-md-6" for="ip_cl_ledsgpos" style="width:170px" lang="en" data-lang-token="conf_leds_layout_cl_gappos">Gap position</label>
 										<div class=" input-group">
-											<input class="form-control ledCLconstr" id="ip_cl_ledsgpos" type="number" value="0" min="0" step="1"></input>
+											<input class="form-control ledCLconstr" id="ip_cl_ledsgpos" type="number" value="0" min="0" step="1">
 										</div>
 									</div>
 									<div class="form-group">
-										<label class="col-form-label col-md-6" for="ip_cl_position" style="width:170px;max-width:200px" lang="en" data-lang-token="conf_leds_layout_cl_inppos">Input position</label>
+										<label class="col-form-label col-md-6" for="ip_cl_position" style="width:170px" lang="en" data-lang-token="conf_leds_layout_cl_inppos">Input position</label>
 										<div class=" input-group">
-											<input class="form-control ledCLconstr" id="ip_cl_position" type="number" value="0" step="1"></input>
+											<input class="form-control ledCLconstr" id="ip_cl_position" type="number" value="0" step="1">
 										</div>
 									</div>
 									<div class="form-group">
-										<label class="col-form-label col-md-6" for="ip_cl_reverse" style="width:170px;max-width:200px" lang="en" data-lang-token="conf_leds_layout_cl_reversdir">Reverse direction</label>
-										<div class=" input-group">
+										<label class="col-form-label col-md-6" for="ip_cl_reverse" style="width:190px" lang="en" data-lang-token="conf_leds_layout_cl_reversdir">Reverse direction</label>
+										<div class="checkbox">
 											<input class="ledCLconstr" id="ip_cl_reverse" type="checkbox" value="false"></input>
+											<label></label>
 										</div>
 									</div>
 									<div class="">
