--- a/assets/webconfig/content/dashboard.html
+++ b/assets/webconfig/content/dashboard.html
@@ -1,4 +1,4 @@
-			<div class="container-fluid">
+			<div class="container-fluid" id="content_dashboard">
 				<div class="row">
 					<div class="col-lg-12">
 						<h2 class="page-header"><i class="fa fa-dashboard fa-fw"></i><span lang="en" data-lang-token="main_menu_dashboard_token">Dashboard</span></h2>
