--- a/assets/webconfig/content/kodiconf.html
+++ b/assets/webconfig/content/kodiconf.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-lg-12">
-			<h2 class="page-header"><i class="fa fa-play-circle-o fa-fw"></i><span lang="en" data-lang-token="conf_kodi_label_title">Kodi Watch</span></h2>
+			<h2 class="page-header"><i class="fa fa-play-circle-o fa-fw"></i><span  data-i18n="conf_kodi_label_title">Kodi Watch</span></h2>
 			<div class="introd">
-				<h4 lang="en" data-lang-token="conf_kodi_label_intro">The Kodi Watcher enables you to enable and disable the screencapture depending on Kodi state. This is not limited to the same machine, you could observe also a Kodi on any other device at your network.</h4>
+				<h4  data-i18n="conf_kodi_label_intro">The Kodi Watcher enables you to enable and disable the screencapture depending on Kodi state. This is not limited to the same machine, you could observe also a Kodi on any other device at your network.</h4>
 			</div>
 			<hr />
 			<div class="alert alert-info" role="alert">
@@ -13,7 +13,7 @@
 
 			<div class="col-lg-12">
 				<div id='editor_container'/>
-				<button  class="btn btn-success" id='btn_submit'>Save Settings</button>
+				<button  class="btn btn-success" id='btn_submit' data-i18n="general_button_savesettings">Save Settings</button>
 			</div>
 
 		</div>
