--- a/assets/webconfig/content/network.html
+++ b/assets/webconfig/content/network.html
@@ -2,15 +2,14 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-lg-12">
-			<h2 class="page-header"><i class="fa fa-sitemap fa-fw"></i><span lang="en" data-lang-token="main_menu_network_conf_token">Network Services</span></h2> 
+			<h2 class="page-header"><i class="fa fa-sitemap fa-fw"></i><span  data-i18n="main_menu_network_conf_token">Network Services</span></h2> 
 			<div class="introd">
-				<h4 lang="en" data-lang-token="conf_network_label_intro">All network based settings could you find here.</h4>
+				<h4  data-i18n="conf_network_label_intro">All network based settings are listed here.</h4>
 			</div>
 			<hr />
 			<div class="col-lg-12">
-<!--				<form id="grabberConfForm"></form>-->
 				<div id='editor_container'/>
-				<button  class="btn btn-success" id='btn_submit'>Save Settings</button>
+				<button  class="btn btn-success" id='btn_submit' data-i18n="general_button_savesettings">Save Settings</button>
 			</div>
 
 		</div>
