--- a/assets/webconfig/content/remote.html
+++ b/assets/webconfig/content/remote.html
@@ -33,7 +33,7 @@
 			<div class="panel panel-primary" >
 				<div class="panel-heading" data-i18n="remote_input_label_sourceselection">Source selection</div>
 				<div class="panel-body">
-					<p>Hyperion uses a priority system to select a source. Everything you set has a priority (Effect/Color/Platform capture/USB capture and network sources). By default, Hyperion select sources depending on priority (lowest number reflects the current active source). Now you have the opportunity to select sources on your own.</p>
+					<span data-i18n="remote_help_text">Hyperion uses a priority system to select a source. Everything you set has a priority (Effect/Color/Platform capture/USB capture and network sources). By default, Hyperion select sources depending on priority (lowest number reflects the current active source). Now you have the opportunity to select sources on your own.</span>
 					<p style="font-weight:bold">Schema: NameOfSource(priority)</p>
 					<div id="hyperion_inputs"><i style="font-size:120px;padding:20px;text-align:center;display: inline-block;width: 100%;line-height: normal;" class="fa fa-cog fa-spin"></i></div>
 				</div>
