--- a/assets/webconfig/content/webconfig.html
+++ b/assets/webconfig/content/webconfig.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-lg-12">
-			<h2 class="page-header"><i class="fa fa-sitemap fa-fw"></i><span  data-i18n="main_menu_network_conf_token">Network Services</span></h2> 
+			<h2 class="page-header"><i class="fa fa-wrench fa-fw"></i><span data-i18n="main_menu_webconfig_token">Webinterface</span></h2> 
 			<div class="introd">
-				<h4  data-i18n="conf_network_label_intro">All network based settings are listed here.</h4>
+				<h4 data-i18n="conf_webconfig_label_intro">Webinterface settings. Edit wisely</h4>
 			</div>
 			<hr />
 			<div id='editor_container'/>
@@ -12,4 +12,4 @@
 	</div>
 </div>
 
-<script src="/js/content_network.js"></script>
+<script src="/js/content_webconfig.js"></script>
