--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -88,6 +88,16 @@
 			<!-- /.navbar-header -->
 
 			<ul class="nav navbar-top-links navbar-right">
+				<li class="dropdown" id="btn_setlang">
+					<a href="#">		
+						<i class="fa fa-globe fa-fw"></i>
+					</a>
+				</li>
+				<li class="dropdown" id="btn_setaccess">
+					<a href="#">		
+						<i class="fa fa-key fa-fw"></i>
+					</a>
+				</li>
 				<!-- /.dropdown -->
 				<li class="dropdown">
 					<a class="dropdown-toggle" data-toggle="dropdown" href="#">
@@ -189,6 +199,7 @@
 						<li>
 							<a class="inactive"><i class="fa fa-industry fa-fw"></i><span  data-i18n="main_menu_system_token">System</span><span class="fa arrow"></span></a>
 							<ul class="nav nav-second-level">
+								<li> <a class="inactive" id="load_webconfig"><i class="fa fa-wrench fa-fw"></i><span  data-i18n="main_menu_webconfig_token">Webconfiguration</span></a> </li>
 								<li> <a class="inactive" id="load_logging"><i class="fa fa-reorder fa-fw"></i><span  data-i18n="main_menu_logging_token">Log</span></a> </li>
 								<li> <a class="inactive" id="load_update"><i class="fa fa-download fa-fw"></i><span  data-i18n="main_menu_update_token">Update</span></a> </li>
 							</ul>
@@ -223,9 +234,10 @@
 			<div class="modal-content">
 			<div class="modal-body">
 				<center>
-					<div class="modal-bodyicon"></div>
+					<div class="modal-bodyicon" style="margin-bottom:20px;"></div>
 					<h4 class="modal-bodytitle" style="font-weight:bold;text-transform:uppercase;"></h4>
 					<div class="modal-bodycontent"></div>
+					<select id="modal_select" class="form-control" style="margin-top:10px;width:auto;"></select>
 				</center>
 			</div>
 			<div class="modal-footer">
@@ -247,6 +259,7 @@
 
 	<script src="/js/lib/jquery-ui.min.js"></script>
 	<script src="/js/content_index.js"></script>
+	<script src="/js/localStorage.js"></script>
 	
 </body>
 
