--- a/assets/webconfig/content/leds.html
+++ b/assets/webconfig/content/leds.html
@@ -101,7 +101,7 @@
 						<div class="panel panel-primary">
 							<div class="panel-heading headcollapse" data-toggle="collapse" data-parent="#accordion" data-target="#collapse4">
 								<h4 class="panel-title">
-									<a><i class="fa fa-wrench fa-fw"></i><span  data-i18n="conf_leds_layout_generatedconf">Generated/Actual LED Configuration</span></a>
+									<a><i class="fa fa-wrench fa-fw"></i><span  data-i18n="conf_leds_layout_generatedconf">Generated/Current LED Configuration</span></a>
 								</h4>
 							</div>
 							<div id="collapse4" class="panel-collapse collapse in">
