implement webui live video

--- a/assets/webconfig/content/leds.html
+++ b/assets/webconfig/content/leds.html
@@ -83,11 +83,12 @@
 		<div id="menu_display" class="tab-pane fade" style="padding-top:10px">
 			<div  class="container-fluid">
 				<div id="leds_canvas"/>
-
+				
 				<div id="leds_controls">
 					<button  type="button" class="btn btn-success" id="leds_toggle"  data-i18n="conf_leds_test_button_toggleleds">toggle leds</button>
 					<button  type="button" class="btn btn-danger" id="leds_toggle_num"  data-i18n="conf_leds_test_button_togglelednumber">toggle led numbers</button>
 					<button  type="button" class="btn btn-danger" id="leds_toggle_live"  data-i18n="conf_leds_test_button_toggleliveleds">toggle live leds</button>
+					<button  type="button" class="btn btn-danger" id="leds_toggle_live_video"  data-i18n="conf_leds_test_button_togglelivevideo">toggle live video</button>
 				</div>
 			</div>
 		</div>
@@ -296,6 +297,7 @@
 					<div id="previewledcount"></div>
 					<div class="col-lg-12 st_helper" style="padding-left:0px; padding-right:0px">
 						<div id="leds_preview"></div>
+						<div>
 					</div>
 				</div>
 				<div class="panel-footer">
