--- a/assets/webconfig/content/dashboard.html
+++ b/assets/webconfig/content/dashboard.html
@@ -4,8 +4,9 @@
 						<h2 class="page-header"><i class="fa fa-dashboard fa-fw"></i><span  data-i18n="main_menu_dashboard_token">Dashboard</span></h2>
 						<div class="introd">
 							<h4  data-i18n="dashboard_label_intro">The dashboard give you a quick overview about the status of Hyperion and show you the latest news of the Hyperion Blog.</h4>
+						<hr />
 						</div>
-						<hr>
+						<div class="row">
 							<div class="col-md-6 col-xxl-4">
 								<div class="panel panel-default">
 									<div class="panel-heading">
@@ -69,7 +70,7 @@
 									</div>
 								</div>
 							</div>
-
+						</div>
 					</div>
 					<!-- /.col-lg-12 -->
 				</div>
