reset watchdog regularly

--- a/assets/webconfig/content/effects_configurator.html
+++ b/assets/webconfig/content/effects_configurator.html
@@ -7,7 +7,7 @@
 			<hr />
 			</div>
 			<div class="row">
-			<div class="col-lg-6">
+			<div class="col-xxl-6">
 				<div class="panel panel-default" >
 					<div class="panel-heading">
 						<label for="effectslist"  data-i18n="effectsconfigurator_label_chooseeff">Choose Base-Effect:</label>
@@ -32,7 +32,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-6">
+			<div class="col-xxl-6">
 				<div class="panel panel-default" >
 					<div class="panel-heading">
 						<label for="effectsdellist"  data-i18n="effectsconfigurator_label_deleffect">Delete Effect:</label>
