--- a/assets/webconfig/content/leds.html
+++ b/assets/webconfig/content/leds.html
@@ -44,7 +44,8 @@
 	<div class="tab-content">
 
 		<div id="menu_controller" class="tab-pane fade in active" style="padding-top:10px">
-			<div class="col-lg-6">
+			<div class="row">
+			<div class="col-lg-8">
 			<div class="panel panel-primary">
 				<div class="panel-heading form-group" style="font-size:90%;white-space:nowrap;">
 					<label for="leddevices"  data-i18n="conf_leds_contr_label_contrtype">Controller type:</label>
@@ -82,6 +83,7 @@
 					<button id='btn_submit_controller' class="btn btn-success"  data-i18n="general_button_savesettings">Save Settings</button>
 				</div>
 			</div>
+		</div>
 		</div>
 		</div>
 
