--- a/assets/webconfig/content/remote.html
+++ b/assets/webconfig/content/remote.html
@@ -51,4 +51,17 @@
 	</div>
 </div>
 
+<div  class="container-fluid">
+	<div class="row">
+		<div class="col-lg-6">
+			<div class="panel panel-primary" >
+				<div class="panel-heading" data-i18n="remote_maptype_label">Mapping types</div>
+				<div class="panel-body">
+					<div id="mappingsbutton"><i style="font-size:120px;padding:20px;text-align:center;display: inline-block;width: 100%;line-height: normal;" class="fa fa-cog fa-spin"></i></div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
 <script src="/js/content_remote.js" ></script>
