impl options explanation, uiLock (#343)
* update schemas

* update

* killed upstream change

* min prio is now 100

* reset watchdog regularly

* update

* fix

* update

--- a/assets/webconfig/content/effects_configurator.html
+++ b/assets/webconfig/content/effects_configurator.html
@@ -4,20 +4,24 @@
 			<h2 class="page-header"><i class="fa fa-cogs fa-fw"></i><span  data-i18n="main_menu_effectsconfigurator_token">Effects Configurator</span></h2> 
 			<div class="introd">
 				<h4  data-i18n="effectsconfigurator_label_intro">Create out of the base effects new effects that are tuned to your liking. Depending on Effect there are options like color, speed, direction and more available.</h4>
-			</div>
 			<hr />
+			</div>
+			<div class="row">
+			<div class="col-xxl-6">
 				<div class="panel panel-default" >
 					<div class="panel-heading">
 						<label for="effectslist"  data-i18n="effectsconfigurator_label_chooseeff">Choose Base-Effect:</label>
 						<select id="effectslist" class="form-control" style="color:black;width:auto;margin-left:10px;display:inline-block" />
 					</div>
 					<div class="panel-body">
-						<div class="form-group row">
-							<label for="name-input" class="col-xs-2 col-form-label" data-i18n="effectsconfigurator_label_effectname">Effect name:</label>
-							<div class="col-xs-10">
-								<input class="form-control" type="text" id="name-input">
-							</div>
-						</div>
+						<table>
+							<tbody>
+								<tr>
+									<td class="ltd"><label for="name-input" data-i18n="effectsconfigurator_label_effectname">Effect name:</label></td>
+									<td class="itd"><input class="form-control" type="text" id="name-input" /></td>
+								</tr>
+							</tbody>
+						</table>						
 						<div id="editor_container" />
 					</div>
 					 <div class="panel-footer" id="eff_footer">
@@ -27,6 +31,8 @@
 						<button  class="btn btn-primary pull-right" id='btn_write' data-i18n="effectsconfigurator_button_saveeffect">Save Effect</button>
 					</div>
 				</div>
+			</div>
+			<div class="col-xxl-6">
 				<div class="panel panel-default" >
 					<div class="panel-heading">
 						<label for="effectsdellist"  data-i18n="effectsconfigurator_label_deleffect">Delete Effect:</label>
@@ -34,6 +40,8 @@
 						<button  class="btn btn-primary pull-right" id='btn_delete' data-i18n="effectsconfigurator_button_deleffect">Delete Effect</button>
 					</div>
 				</div>
+			</div>
+			</div>
 		</div>
 	</div>
 </div>
