--- a/assets/webconfig/content/remote.html
+++ b/assets/webconfig/content/remote.html
@@ -2,8 +2,8 @@
 <h2 class="page-header"><i class="fa fa-wifi fa-fw"></i><span data-i18n="main_menu_remotecontrol_token">Remote Control</span></h2>
 	<div class="introd">
 		<h4 data-i18n="remote_label_intro">Set an effect/color. You could also select a source manually. The Components control give the opportunity to enable/disable components of Hyprion during runtime. All changes you made here are lost after a restart.</h4>
+	<hr />
 	</div>
-	<hr>
 </div>
 
 <div class="container-fluid">
@@ -45,6 +45,19 @@
 				<div class="panel-heading" data-i18n="remote_components_label_components">Components control</div>
 				<div class="panel-body">
 					<div id="componentsbutton"><i style="font-size:120px;padding:20px;text-align:center;display: inline-block;width: 100%;line-height: normal;" class="fa fa-cog fa-spin"></i></div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div  class="container-fluid">
+	<div class="row">
+		<div class="col-lg-6">
+			<div class="panel panel-primary" >
+				<div class="panel-heading" data-i18n="remote_maptype_label">Mapping types</div>
+				<div class="panel-body">
+					<div id="mappingsbutton"><i style="font-size:120px;padding:20px;text-align:center;display: inline-block;width: 100%;line-height: normal;" class="fa fa-cog fa-spin"></i></div>
 				</div>
 			</div>
 		</div>
