--- a/assets/webconfig/content/effects_configurator.html
+++ b/assets/webconfig/content/effects_configurator.html
@@ -7,14 +7,14 @@
 			<hr />
 			</div>
 			<div class="row">
-			<div class="col-xxl-6">
+			<div class="col-lg-6">
 				<div class="panel panel-default" >
 					<div class="panel-heading">
 						<label for="effectslist"  data-i18n="effectsconfigurator_label_chooseeff">Choose Base-Effect:</label>
 						<select id="effectslist" class="form-control" style="color:black;width:auto;margin-left:10px;display:inline-block" />
 					</div>
 					<div class="panel-body">
-						<table>
+						<table style="margin-bottom:8px">
 							<tbody>
 								<tr>
 									<td class="ltd"><label for="name-input" data-i18n="effectsconfigurator_label_effectname">Effect name:</label></td>
@@ -32,7 +32,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xxl-6">
+			<div class="col-lg-6">
 				<div class="panel panel-default" >
 					<div class="panel-heading">
 						<label for="effectsdellist"  data-i18n="effectsconfigurator_label_deleffect">Delete Effect:</label>
