--- a/assets/webconfig/content/kodiconf.html
+++ b/assets/webconfig/content/kodiconf.html
@@ -10,22 +10,7 @@
 				<strong>HINT 1:</strong> In any case you need to enable the remote control for Kodi. Please checkout Wiki for instructions. LINK<br>
 				<strong>HINT 2:</strong> If you just use a USB-Grabber you could enable the Kodi Watch for this separately at the USB-Grabber page.
 			</div>
-			<div class="row">
-				<div class="col-lg-6">
-					<div class="panel panel-default">
-						<div class="panel-heading"><i class="fa fa-play-circle-o fa-fw"></i><span data-i18n="conf_kodi_label_title">Kodi Watch</span></div>
-						<div class="panel-body">
-							<div id='editor_container'/>
-						</div>
-						<div class="panel-footer">
-							<button  class="btn btn-success" id='btn_submit' data-i18n="general_button_savesettings">Save Settings</button>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<div id="opt_expl"></div>
-				</div>
-			</div>
+			<div class="row" id="conf_cont"></div>
 		</div>
 	</div>
 </div>
