--- a/assets/webconfig/content/logging.html
+++ b/assets/webconfig/content/logging.html
@@ -6,8 +6,7 @@
 				<h4 data-i18n="conf_logging_label_intro">Area to check log messages, depending on loglevel setting you see more or less.</h4>
 			<hr />
 			</div>
-			<div id='editor_container'/>
-			<button  class="btn btn-success" id='btn_submit' data-i18n="general_button_savesettings">Save Settings</button>
+			<div class="row" id='conf_cont'></div>
 			<hr />
 			<pre>
 				<div id="logmessages" style="overflow:scroll;max-height:400px" />
