--- a/assets/webconfig/content/colors.html
+++ b/assets/webconfig/content/colors.html
@@ -7,8 +7,7 @@
 				<h4  data-i18n="conf_colors_label_intro">Color calibration, smoothing (color transistions) and detection of blackbars.</h4>
 			<hr />
 			</div>
-			<div id='editor_container'/>
-			<button  class="btn btn-success" id='btn_submit' data-i18n="general_button_savesettings">Save Settings</button>
+			<div id="conf_cont"></div>
 		</div>
 	</div>
 </div>
