--- a/assets/webconfig/content/general.html
+++ b/assets/webconfig/content/general.html
@@ -6,20 +6,21 @@
 				<h4 data-i18n="conf_general_label_intro"></h4>
 			</div>
 			<hr />
+			<div class="row" id="conf_cont"></div>
 			<div class="row">
-				<div class="col-lg-6">
+				<div class="col-lg-6" id="conf_imp">
 					<div class="panel panel-default">
-						<div class="panel-heading"><i class="fa fa-wrench fa-fw"></i><span data-i18n="edt_conf_gen_heading_title">General</span></div>
+						<div class="panel-heading"><i class="fa fa-wrench fa-fw"></i><span data-i18n="conf_general_impexp_title"></span></div>
 						<div class="panel-body">
-							<div id='editor_container'/>
+						<p data-i18n="conf_general_impexp_l1" style="font-weight:bold"></p>
+						<p data-i18n="conf_general_impexp_l2" style="font-weight:bold"></p>
+						<input type="file" id="select_import_conf" accept=".json">
 						</div>
-						<div class="panel-footer">
-							<button  class="btn btn-success" id='btn_submit' data-i18n="general_button_savesettings">Save Settings</button>
+						<div class="panel-footer" style="text-align:right">
+						<button type="file" class="btn btn-primary" id="btn_import_conf" data-i18n="conf_general_impexp_impbtn" disabled>Import</button>
+						<button class="btn btn-primary" id="btn_export_conf" data-i18n="conf_general_impexp_expbtn">Export</button>
 						</div>
 					</div>
-				</div>
-				<div class="col-lg-6">
-					<div id="opt_expl"></div>
 				</div>
 			</div>
 		</div>
