--- a/assets/webconfig/content/leds.html
+++ b/assets/webconfig/content/leds.html
@@ -1,12 +1,3 @@
-<style>
-	#leds_canvas {width:800px; height:450px; background-color:#AAAAAA; position:absolute; margin:10px; box-shadow: 10px 10px 5px #BBBBBB;
-	background-image:url(/img/hyperion/hyperionlogo.png); background-repeat:no-repeat; background-position: center; border-radius:2px; }
-	.led { display:inline-block; border: 1px solid black; position:absolute; opacity:0.8; text-align:center;
-	vertical-align:middle; padding:4px;  border-radius:2px;}
-	.led_num, .led_prev_num {display:none; position:relative; color:black; background-color: white;
-		border-radius:2px; padding:1px; vertical-align:middle; text-align:center;  font-size:0.8em;}
-	#leds_controls {white-space:nowrap; margin-top:500px;}
-</style>
 
 <div class="modal fade bs-pair-modal-lg" id="pairmodal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
 	<div class="modal-dialog modal-lg" role="document">
@@ -26,8 +17,6 @@
 	</div>
 </div>
 
-
-
 <div class="container-fluid">
 	<h2 class="page-header"><i class="fa fa-lightbulb-o fa-fw"></i><span  data-i18n="main_menu_leds_conf_token">LED Hardware</span></h2>
 	<div class="introd">
@@ -38,7 +27,6 @@
 	<ul id="leds_cfg_nav" class="nav nav-tabs">
 		<li class="active"><a data-toggle="tab" href="#menu_controller"  data-i18n="conf_leds_nav_label_ledcontroller">LED Controller</a></li>
 		<li><a data-toggle="tab" href="#menu_gencfg"  data-i18n="conf_leds_nav_label_ledlayout">LED Layout</a></li>
-		<li><a data-toggle="tab" href="#menu_display"  data-i18n="conf_leds_nav_label_ledtesting">LED Testing</a></li>
 	</ul>
 
 	<div class="tab-content">
@@ -79,25 +67,12 @@
 						</div>
 					</div>
 				</div>
-				<div class="panel-footer">
-					<button id='btn_submit_controller' class="btn btn-success"  data-i18n="general_button_savesettings">Save Settings</button>
+				<div class="panel-footer" style="text-align:right">
+					<button id='btn_submit_controller' class="btn btn-success"><i class="fa fa-fw fa-save" /><span data-i18n="general_button_savesettings">Save Settings</span></button>
 				</div>
 			</div>
 		</div>
 		</div>
-		</div>
-
-		<div id="menu_display" class="tab-pane fade" style="padding-top:10px">
-			<div  class="container-fluid">
-				<div id="leds_canvas"/>
-				
-				<div id="leds_controls">
-					<button  type="button" class="btn btn-success" id="leds_toggle"  data-i18n="conf_leds_test_button_toggleleds">toggle leds</button>
-					<button  type="button" class="btn btn-danger" id="leds_toggle_num"  data-i18n="conf_leds_test_button_togglelednumber">toggle led numbers</button>
-					<button  type="button" class="btn btn-danger" id="leds_toggle_live"  data-i18n="conf_leds_test_button_toggleliveleds">toggle live leds</button>
-					<button  type="button" class="btn btn-danger" id="leds_toggle_live_video"  data-i18n="conf_leds_test_button_togglelivevideo">toggle live video</button>
-				</div>
-			</div>
 		</div>
 
 		<div id="menu_gencfg" class="tab-pane fade" style="padding-top:10px">
@@ -106,31 +81,13 @@
 				<div class="col-lg-6 col-md-12">
 					<div class="panel-group" id="accordion">
 						<div class="panel panel-primary">
-							<div class="panel-heading headcollapse" data-toggle="collapse" data-parent="#accordion" data-target="#collapse4">
-								<h4 class="panel-title">
-									<a><i class="fa fa-wrench fa-fw"></i><span  data-i18n="conf_leds_layout_generatedconf">Generated/Actual LED Configuration</span></a>
-								</h4>
-							</div>
-							<div id="collapse4" class="panel-collapse collapse in">
-								<div class="panel-body">
-									<p  data-i18n="conf_leds_layout_textf1">This textfield shows by default your current loaded layout and will be overwritten if you generate a new one above. Optional you could perform further edits.</p>
-									<b><p  data-i18n="conf_leds_layout_textf2">Don't forget to save!</p></b>
-									<textarea rows="25" id="ledconfig" class="form-control"></textarea>
-								</div>
-								<div class="panel-footer">
-									<button  type="button" class="btn btn-warning" id="leds_custom_updsim"  data-i18n="conf_leds_layout_button_updsim">Update preview</button>
-									<button  type="button" class="btn btn-success pull-right" id="leds_custom_save"  data-i18n="conf_leds_layout_button_savelay">Save layout</button>
-								</div>
-							</div>
-						</div>
-						<div class="panel panel-primary">
 							<div class="panel-heading headcollapse" data-toggle="collapse" data-parent="#accordion" data-target="#collapse1">
 								<h4 class="panel-title">
 									<a><i class="fa fa-television fa-fw"></i><span  data-i18n="conf_leds_layout_frame">Classic Layout (LED Frame)</span></a>
 								</h4>
 							</div>
-							<div id="collapse1" class="panel-collapse collapse">
-								<div class="panel-body ">
+							<div id="collapse1" class="panel-collapse collapse in">
+								<div class="panel-body">
 									<table class="table borderless">
 										<tbody>
 											<tr>
@@ -138,7 +95,7 @@
 													<label class="ltdlabel" for="ip_cl_ledstop" data-i18n="conf_leds_layout_cl_top">Top</label>
 												</td>
 												<td class="itd input-group">
-													<input class="form-control ledCLconstr" id="ip_cl_ledstop" type="number" value="10" min="0" step="1"></input>
+													<input class="form-control ledCLconstr led_val_int" id="ip_cl_ledstop" type="number" value="10" min="0" step="1"></input>
 													<div class="input-group-addon" data-i18n="edt_append_leds">LEDs</div>
 												</td>
 											</tr>
@@ -147,7 +104,7 @@
 													<label class="ltdlabel" for="ip_cl_ledsbottom" data-i18n="conf_leds_layout_cl_bottom">Bottom</label>
 												</td>
 												<td class="itd input-group">
-													<input class="form-control ledCLconstr" id="ip_cl_ledsbottom" type="number" value="10" min="0" step="1"></input>
+													<input class="form-control ledCLconstr led_val_int" id="ip_cl_ledsbottom" type="number" value="10" min="0" step="1"></input>
 													<div class="input-group-addon" data-i18n="edt_append_leds">LEDs</div>
 												</td>
 											</tr>
@@ -156,7 +113,7 @@
 													<label class="ltdlabel" for="ip_cl_ledsleft" data-i18n="conf_leds_layout_cl_left">Left</label>
 												</td>
 												<td class="itd input-group">
-													<input class="form-control ledCLconstr" id="ip_cl_ledsleft" type="number" value="6" min="0" step="1"></input>
+													<input class="form-control ledCLconstr led_val_int" id="ip_cl_ledsleft" type="number" value="6" min="0" step="1"></input>
 													<div class="input-group-addon" data-i18n="edt_append_leds">LEDs</div>
 												</td>
 											</tr>
@@ -165,7 +122,7 @@
 													<label class="ltdlabel" for="ip_cl_ledsright" data-i18n="conf_leds_layout_cl_right">Right</label>
 												</td>
 												<td class="itd input-group">
-													<input class="form-control ledCLconstr" id="ip_cl_ledsright" type="number" value="6" min="0" step="1"></input>
+													<input class="form-control ledCLconstr led_val_int" id="ip_cl_ledsright" type="number" value="6" min="0" step="1"></input>
 													<div class="input-group-addon" data-i18n="edt_append_leds">LEDs</div>
 												</td>
 											</tr>
@@ -174,7 +131,7 @@
 													<label class="ltdlabel" for="ip_cl_ledsglength" data-i18n="conf_leds_layout_cl_gaglength">Gap length</label>
 												</td>
 												<td class="itd input-group">
-													<input class="form-control ledCLconstr" id="ip_cl_ledsglength" type="number" value="0" min="0" step="1"></input>
+													<input class="form-control ledCLconstr led_val_int" id="ip_cl_ledsglength" type="number" value="0" min="0" step="1"></input>
 													<div class="input-group-addon" data-i18n="edt_append_leds">LEDs</div>
 												</td>
 											</tr>
@@ -183,7 +140,7 @@
 													<label class="ltdlabel" for="ip_cl_ledsgpos" data-i18n="conf_leds_layout_cl_gappos">Gap position</label>
 												</td>
 												<td class="itd">
-													<input class="form-control ledCLconstr" id="ip_cl_ledsgpos" type="number" value="0" min="0" step="1">
+													<input class="form-control ledCLconstr led_val_int" id="ip_cl_ledsgpos" type="number" value="0" min="0" step="1">
 												</td>
 											</tr>
 											<tr>
@@ -191,7 +148,7 @@
 													<label class="ltdlabel" for="ip_cl_position" data-i18n="conf_leds_layout_cl_inppos">Input position</label>
 												</td>
 												<td class="itd">
-													<input class="form-control ledCLconstr" id="ip_cl_position" type="number" value="0" step="1">
+													<input class="form-control ledCLconstr led_val_int" id="ip_cl_position" type="number" value="0" step="1">
 												</td>
 											</tr>
 											<tr>
@@ -200,7 +157,7 @@
 												</td>
 												<td class="itd">
 													<div class="checkbox">
-														<input class="ledCLconstr" id="ip_cl_reverse" type="checkbox" value="false"></input>
+														<input class="ledCLconstr led_val_bool" id="ip_cl_reverse" type="checkbox" value="false"></input>
 														<label></label>
 													</div>
 												</td>
@@ -219,37 +176,37 @@
 													<tbody>
 														<tr>
 															<td class="ltd">
-																<label class="ltdlabel" for="ip_cl_ledshdepth" data-i18n="conf_leds_layout_cl_hleddepth">Horizontal LED depth</label>
+																<label class="ltdlabel" for="ip_cl_rawledshdepth" data-i18n="conf_leds_layout_cl_hleddepth">Horizontal LED depth</label>
 															</td>
 															<td class="itd input-group">
-																<input class="form-control ledCLconstr" id="ip_cl_ledshdepth" type="number" value="8" min="1" max="100" step="1"></input>
+																<input class="form-control ledCLconstr led_val_int" id="ip_cl_rawledshdepth" type="number" value="8" min="1" max="100" step="1"></input>
 																<div class="input-group-addon" data-i18n="edt_append_percent">%</div>
 															</td>
 														</tr>
 														<tr>
 															<td class="ltd">
-																<label class="ltdlabel" for="ip_cl_ledsvdepth" data-i18n="conf_leds_layout_cl_vleddepth">Vertical LED depth</label>
+																<label class="ltdlabel" for="ip_cl_rawledsvdepth" data-i18n="conf_leds_layout_cl_vleddepth">Vertical LED depth</label>
 															</td>
 															<td class="itd input-group">
-																<input class="form-control ledCLconstr" id="ip_cl_ledsvdepth" type="number" value="5" min="1" max="100" step="1"></input>
+																<input class="form-control ledCLconstr led_val_int" id="ip_cl_rawledsvdepth" type="number" value="5" min="1" max="100" step="1"></input>
 																<div class="input-group-addon" data-i18n="edt_append_percent">%</div>
 															</td>
 														</tr>
 														<tr>
 															<td class="ltd">
-																<label class="ltdlabel" for="ip_cl_ledsedgegap" data-i18n="conf_leds_layout_cl_edgegap">Edge Gap</label>
+																<label class="ltdlabel" for="ip_cl_rawledsedgegap" data-i18n="conf_leds_layout_cl_edgegap">Edge Gap</label>
 															</td>
 															<td class="itd input-group">
-																<input class="form-control ledCLconstr" id="ip_cl_ledsedgegap" type="number" value="0" min="0" max="50" step="1"></input>
+																<input class="form-control ledCLconstr led_val_int" id="ip_cl_rawledsedgegap" type="number" value="0" min="0" max="50" step="1"></input>
 																<div class="input-group-addon" data-i18n="edt_append_percent">%</div>
 															</td>
 														</tr>
 														<tr>
 															<td class="ltd">
-																<label class="ltdlabel" for="ip_cl_ledscornergap" data-i18n="conf_leds_layout_cl_cornergap">Corner Gap</label>
+																<label class="ltdlabel" for="ip_cl_rawledscornergap" data-i18n="conf_leds_layout_cl_cornergap">Corner Gap</label>
 															</td>
 															<td class="itd input-group">
-																<input class="form-control ledCLconstr" id="ip_cl_ledscornergap" type="number" value="0" min="0" max="50" step="1"></input>
+																<input class="form-control ledCLconstr led_val_int" id="ip_cl_rawledscornergap" type="number" value="0" min="0" max="50" step="1"></input>
 																<div class="input-group-addon" data-i18n="edt_append_percent">%</div>
 															</td>
 														</tr>
@@ -259,8 +216,9 @@
 										</div>
 									</div>
 								</div>
-								<div class="panel-footer">
-									<button id="btn_cl_generate" class="btn btn-warning"  data-i18n="conf_leds_layout_cl_generate">Generate LED configuration</button>
+								<div class="panel-footer" style="text-align:right;">
+									<button id="btn_cl_generate" class="btn btn-warning"><i class="fa fa-fw fa-television"></i><span data-i18n="conf_leds_layout_cl_generate">Generate LED configuration</span></button>
+									<button id="btn_cl_save" class="btn btn-success"><i class="fa fa-fw fa-save"></i><span data-i18n="conf_leds_layout_button_savelay">Save layout</span></button>
 								</div>
 							</div>
 						</div>
@@ -279,7 +237,7 @@
 											<label class="ltdlabel" for="ip_ma_ledshoriz" data-i18n="conf_leds_layout_ma_horiz">Horizontal</label>
 										</td>
 										<td class="itd input-group">
-											<input class="form-control ledMAconstr" id="ip_ma_ledshoriz" type="number" value="10" min="1" step="1"></input>
+											<input class="form-control ledMAconstr led_val_int" id="ip_ma_ledshoriz" type="number" value="10" min="1" step="1"></input>
 											<div class="input-group-addon" data-i18n="edt_append_leds">LEDs</div>
 										</td>
 									</tr>
@@ -288,7 +246,7 @@
 											<label class="ltdlabel" for="ip_ma_ledsvert" data-i18n="conf_leds_layout_ma_vert">Vertical</label>
 										</td>
 										<td class="itd input-group">
-											<input class="form-control ledMAconstr" id="ip_ma_ledsvert" type="number" value="10" min="1" step="1"></input>
+											<input class="form-control ledMAconstr led_val_int" id="ip_ma_ledsvert" type="number" value="10" min="1" step="1"></input>
 											<div class="input-group-addon" data-i18n="edt_append_leds">LEDs</div>
 										</td>
 									</tr>
@@ -297,7 +255,7 @@
 											<label class="ltdlabel" for="ip_ma_cabling"  data-i18n="conf_leds_layout_ma_cabling">Cabling</label>
 										</td>
 										<td class="itd">
-											<select class="form-control ledMAconstr" id="ip_ma_cabling">
+											<select class="form-control ledMAconstr led_val_string" id="ip_ma_cabling">
 												<option value="snake"  data-i18n="conf_leds_layout_ma_optsnake">Snake</option>
 												<option value="parallel"  data-i18n="conf_leds_layout_ma_optparallel">Parallel</option>
 											</select>
@@ -320,7 +278,7 @@
 											<label class="ltdlabel" for="ip_ma_start" data-i18n="conf_leds_layout_ma_position">Input</label>
 										</td>
 										<td class="itd">
-											<select class="form-control ledMAconstr" id="ip_ma_start">
+											<select class="form-control ledMAconstr led_val_string" id="ip_ma_start">
 												<option value="top-left"  data-i18n="conf_leds_layout_ma_opttopleft">Top left</option>
 												<option value="top-right"  data-i18n="conf_leds_layout_ma_opttopright">Top right</option>
 												<option value="bottom-left"  data-i18n="conf_leds_layout_ma_optbottomleft">Bottom left</option>
@@ -331,10 +289,29 @@
 									</tbody>
 								</table>
 							</div>
-							<div class="panel-footer">
-									<button id="btn_ma_generate" class="btn btn-warning"  data-i18n="conf_leds_layout_cl_generate">Generate LED configuration</button>
+							<div class="panel-footer" style="text-align:right;">
+									<button id="btn_ma_generate" class="btn btn-warning"><i class="fa fa-fw fa-th"></i><span data-i18n="conf_leds_layout_cl_generate">Generate LED configuration</span></button>
+									<button id="btn_ma_save" class="btn btn-success"><i class="fa fa-fw fa-save"></i><span data-i18n="conf_leds_layout_button_savelay">Save layout</span></button>
 							</div>
 						</div>
+						</div>
+						<div id="texfield_panel" class="panel panel-primary">
+							<div class="panel-heading headcollapse" data-toggle="collapse" data-parent="#accordion" data-target="#collapse4">
+								<h4 class="panel-title">
+									<a><i class="fa fa-wrench fa-fw"></i><span  data-i18n="conf_leds_layout_generatedconf">Generated/Actual LED Configuration</span></a>
+								</h4>
+							</div>
+							<div id="collapse4" class="panel-collapse collapse">
+								<div class="panel-body">
+									<p  data-i18n="conf_leds_layout_textf1">This textfield shows by default your current loaded layout and will be overwritten if you generate a new one above. Optional you could perform further edits.</p>
+									<b><p  data-i18n="conf_leds_layout_textf2">Don't forget to save!</p></b>
+									<textarea rows="25" id="ledconfig" class="form-control"></textarea>
+								</div>
+								<div class="panel-footer">
+									<button  type="button" class="btn btn-warning" id="leds_custom_updsim"><i class="fa fa-search fa-fw"></i><span data-i18n="conf_leds_layout_button_updsim">Update preview</span></button>
+									<button  type="button" class="btn btn-success pull-right" id="leds_custom_save"><i class="fa fa-fw fa-save"></i><span data-i18n="conf_leds_layout_button_savelay">Save layout</span></button>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div> <!-- accordion -->
@@ -344,14 +321,14 @@
 						<h4 class="panel-title"><i class="fa fa-search fa-fw"></i><span  data-i18n="conf_leds_layout_peview">LED Layout preview</span></h4>
 					</div>
 					<div class="panel-body">
-						<div id="previewcreator"></div>
-						<div id="previewledcount"></div>
+						<p id="previewcreator" style="font-weight:bold"></p>
+						<p id="previewledcount" style="font-weight:bold"></p>
 						<div class="col-lg-12 st_helper" style="padding-left:0px; padding-right:0px">
 							<div id="leds_preview"></div>
 						</div>
 					</div>
 					<div class="panel-footer">
-						<button  type="button" class="btn btn-danger" id="leds_prev_toggle_num"  data-i18n="conf_leds_test_button_togglelednumber">toggle led numbers</button>
+						<button  type="button" class="btn btn-danger" id="leds_prev_toggle_num"><i class="fa fa-info fa-fw"></i><span data-i18n="main_ledsim_btn_togglelednumber">toggle led numbers</span></button>
 					</div>
 				</div>
 			</div>
