--- a/assets/webconfig/content/support.html
+++ b/assets/webconfig/content/support.html
@@ -87,21 +87,21 @@
 		<div class="col-xs-12">
 			<hr>
 			<h3 style="font-weight: bold"  data-i18n="support_label_webrestitle">Information and help ressources</h3>
-			<a href="https://www.hyperion-project.org" target="_blank" class="unlink">
+			<a href="https://www.hyperion-project.org?pk_campaign=WebUI&pk_kwd=support_webpage" target="_blank" class="unlink">
 				<div class="col-xs-12 col-sm-6 col-lg-3 support-container">
 					<i class="fa fa-globe bg-color-wf"></i>
 					<h4  data-i18n="support_label_webpagetitle">Webpage</h4>
 					<p  data-i18n="support_label_webpagetext">Home of Hyperion</p>
 				</div>
 			</a>
-			<a href="https://wiki.hyperion-project.org" target="_blank" class="unlink">
+			<a href="https://wiki.hyperion-project.org?pk_campaign=WebUI&pk_kwd=support_wiki" target="_blank" class="unlink">
 				<div class="col-xs-12 col-sm-6 col-lg-3 support-container">
 					<i class="fa fa-book bg-color-wf"></i>
 					<h4  data-i18n="support_label_wikititle">Wiki</h4>
 					<p  data-i18n="support_label_wikitext">The A to Z source for almost everything Hyperion related</p>
 				</div>
 			</a>
-			<a href="https://forum.hyperion-project.org" target="_blank" class="unlink">
+			<a href="https://forum.hyperion-project.org?pk_campaign=WebUI&pk_kwd=support_forum" target="_blank" class="unlink">
 				<div class="col-xs-12 col-sm-6 col-lg-3 support-container">
 					<i class="fa fa-comments bg-color-wf"></i>
 					<h4  data-i18n="support_label_forumtitle">Forum</h4>
