tune errorpages fix some cgi related stuff, now only python is possible executing and reading python file is possilbe, but it cannot receive any data from webui

--- a/assets/webconfig/errorpages/403.html
+++ b/assets/webconfig/errorpages/403.html
@@ -1,3 +1,4 @@
-<h2>Forbidden</h2>
-<div style="margin-bottom:20px;">__________________________________</div>
-{MESSAGE}
+<div class="panel panel-danger">
+	<div class="panel-heading">403 Forbidden</div>
+	<div class="panel-body">{MESSAGE}</div>
+</div>
