--- a/assets/webconfig/errorpages/404.html
+++ b/assets/webconfig/errorpages/404.html
@@ -1,3 +1,4 @@
-<h2>Page not found</h2>
-<div style="margin-bottom:20px;">__________________________________</div>
-{MESSAGE}
+<div class="panel panel-danger">
+	<div class="panel-heading">404 Page not found</div>
+	<div class="panel-body">{MESSAGE}</div>
+</div>
