--- a/assets/webconfig/errorpages/footer.html
+++ b/assets/webconfig/errorpages/footer.html
@@ -1,6 +1,4 @@
-	</div>
-	<div>__________________________________</div>
-	<div id="footer">Hyperion webserver</div>
-	</div>
-<body>
+	</div> <!-- page -->
+
+</body>
 </html>
