--- a/assets/webconfig/errorpages/405.html
+++ b/assets/webconfig/errorpages/405.html
@@ -1,3 +1,4 @@
-<h2>Method not allowed</h2> 
-<div style="margin-bottom:20px;">__________________________________</div>
-{MESSAGE}
+<div class="panel panel-danger">
+	<div class="panel-heading">405 Method not allowed</div>
+	<div class="panel-body">{MESSAGE}</div>
+</div>
