--- a/assets/webconfig/errorpages/500.html
+++ b/assets/webconfig/errorpages/500.html
@@ -1,3 +1,4 @@
-<h2>internal Server Error</h2> 
-<div style="margin-bottom:20px;">__________________________________</div>
-{MESSAGE}
+<div class="panel panel-danger">
+	<div class="panel-heading">500 Internal server error</div>
+	<div class="panel-body">{MESSAGE}</div>
+</div>
