--- a/assets/webconfig/errorpages/header.html
+++ b/assets/webconfig/errorpages/header.html
@@ -1,31 +1,30 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Hyperion WebServer - Error</title>
 	<!-- Bootstrap Core CSS -->
-	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="/css/bootstrap.css" rel="stylesheet">
 
 	<!-- Flags -->
-	<link href="css/flag-icon.min.css" rel="stylesheet">
+	<link href="/css/flag-icon.min.css" rel="stylesheet">
 
 	<!-- MetisMenu CSS -->
-	<link href="css/metisMenu.css" rel="stylesheet">
+	<link href="/css/metisMenu.css" rel="stylesheet">
 
 	<!-- Custom CSS -->
-	<link href="css/sb-admin-2.css" rel="stylesheet">
-	<link href="css/hyperion.css" rel="stylesheet">
+	<link href="/css/sb-admin-2.css" rel="stylesheet">
+	<link href="/css/hyperion.css" rel="stylesheet">
 
 	<!-- Custom Fonts -->
-	<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 	<style>
-		body {margin-left:50px;};
-		#footer { margin-top:10px; font-size:0.5em;};
-		#header { };
-		#page   { };
+		body {margin:auto; padding-top:50px; }
+		#footer { margin-top:10px; font-size:0.5em; }
+		#page   { }
+		.panel-heading   { font-weight:bold; font-size: 1.3em; }
 	</style>
 	
 </head>
 <body>
-	<div id="wrapper">
-	<div id="header"></div>
-	<div id="page">
+	<div id="page" class="container">
