--- a/assets/webconfig/index.html
+++ b/assets/webconfig/index.html
@@ -1,56 +1,55 @@
 <!DOCTYPE html>
-<html >
+<html>
 
 <head>
-
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 	<meta name="description" content="">
 
-	<title data-i18n="general_webui_title">Hyperion - WebUI</title>
+	<title data-i18n="general_webui_title">Hyperion - Error</title>
 
 	<!-- jQuery -->
-	<script src="js/lib/jquery.min.js"></script>
+	<script src="/js/lib/jquery.min.js"></script>
 
 	<!-- Hyperion -->
-	<script src="js/hyperion.js"></script>
-	<script src="js/ui_utils.js"></script>
+	<script src="/js/hyperion.js"></script>
+	<script src="/js/ui_utils.js"></script>
 
 	<!-- textarea --> 
-	<script src="js/lib/jquery-linedtextarea.js"></script>
-	<link href="css/jquery-linedtextarea.css" type="text/css" rel="stylesheet" />
+	<script src="/js/lib/jquery-linedtextarea.js"></script>
+	<link href="/css/jquery-linedtextarea.css" type="text/css" rel="stylesheet" />
 	
 	<!-- Colorpicker -->
-	<script src="js/lib/bootstrap-colorpicker.min.js"></script>
-	<link href="css/bootstrap-colorpicker.min.css" rel="stylesheet">
+	<script src="/js/lib/bootstrap-colorpicker.min.js"></script>
+	<link href="/css/bootstrap-colorpicker.min.css" rel="stylesheet">
 
 	<!-- JSONEditor -->
-	<script src="js/lib/jsoneditor.js"></script>
+	<script src="/js/lib/jsoneditor.js"></script>
 
 	<!--Language Support -->
-	<script src="js/lib/jquery.i18n.js"></script>
-	<script src="js/lib/jquery.i18n.messagestore.js"></script>
-	<script src="js/lib/jquery.i18n.fallbacks.js"></script>
-	<script src="js/lib/jquery.i18n.parser.js"></script>
-	<script src="js/lib/jquery.i18n.emitter.js"></script>
-	<script src="js/lib/jquery.i18n.language.js"></script>
+	<script src="/js/lib/jquery.i18n.js"></script>
+	<script src="/js/lib/jquery.i18n.messagestore.js"></script>
+	<script src="/js/lib/jquery.i18n.fallbacks.js"></script>
+	<script src="/js/lib/jquery.i18n.parser.js"></script>
+	<script src="/js/lib/jquery.i18n.emitter.js"></script>
+	<script src="/js/lib/jquery.i18n.language.js"></script>
 	
 	<!-- Bootstrap Core CSS -->
-	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="/css/bootstrap.css" rel="stylesheet">
 
 	<!-- Flags -->
-	<link href="css/flag-icon.min.css" rel="stylesheet">
+	<link href="/css/flag-icon.min.css" rel="stylesheet">
 
 	<!-- MetisMenu CSS -->
-	<link href="css/metisMenu.css" rel="stylesheet">
+	<link href="/css/metisMenu.css" rel="stylesheet">
 
 	<!-- Custom CSS -->
-	<link href="css/sb-admin-2.css" rel="stylesheet">
-	<link href="css/hyperion.css" rel="stylesheet">
+	<link href="/css/sb-admin-2.css" rel="stylesheet">
+	<link href="/css/hyperion.css" rel="stylesheet">
 
 	<!-- Custom Fonts -->
-	<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
